--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "my-personal-portfolio",
   "private": true,
   "type": "module",
   "scripts": {
@@ -12,6 +12,8 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "nuxt": "^3.8.0",
+    "sass": "^1.87.0",
+    "sass-loader": "^16.0.5",
     "vue": "^3.3.7",
     "vue-router": "^4.2.5"
   },
@@ -24,5 +26,6 @@
     "pinia": "^2.1.7",
     "prisma": "^5.5.2",
     "supabase": "^1.110.1"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
