create the my personal portfolio

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@pinia/nuxt": "^0.5.1",
     "@supabase/supabase-js": "^2.38.4",
     "lodash": "^4.17.21",
+    "lucide-vue-next": "^0.503.0",
     "nuxt-icon": "^0.6.1",
     "pinia": "^2.1.7",
     "prisma": "^5.5.2",
