--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "nuxt-icon": "^0.6.1",
     "pinia": "^2.1.7",
     "prisma": "^5.5.2",
-    "supabase": "^1.110.1"
+    "supabase": "^1.110.1",
+    "three": "^0.176.0"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
