--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "nuxt": "^3.8.0",
     "sass": "^1.87.0",
     "sass-loader": "^16.0.5",
+    "vite": "^6.3.5",
     "vue": "^3.3.7",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "webpack": "5"
   },
   "dependencies": {
-    "@nuxtjs/tailwindcss": "^6.8.1",
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "@pinia/nuxt": "^0.5.1",
     "@supabase/supabase-js": "^2.38.4",
     "lodash": "^4.17.21",
