--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-personal-portfolio",
+  "packageManager": "yarn@4.6.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -11,18 +11,11 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "nuxt": "^3.17.2",
-    "sass": "^1.87.0",
-    "sass-loader": "^16.0.5",
-    "vite": "^5.0.0",
-    "vue": "^3.3.7",
-    "vue-router": "^4.2.5",
-    "webpack": "5"
+    "nuxt": "^3.7.0"
   },
   "dependencies": {
-    "@nuxtjs/tailwindcss": "^6.6.0",
-    "lucide-vue-next": "^0.503.0",
-    "three": "^0.158.0"
-  },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+    "@nuxtjs/tailwindcss": "^6.8.0",
+    "lucide-vue-next": "^0.279.0",
+    "vue": "^3.3.4"
+  }
 }
