feat: enhance UI and add new project with marquee animation
- Updated package.json to include new dependencies for UI enhancements
- Added a new project entry in projects.json with updated descriptions
- Enhanced Navbar.vue with gradient text and improved styling
- Revamped projects section in index.vue with vue3-marquee for dynamic scrolling

--- a/data/projects.json
+++ b/data/projects.json
@@ -18,10 +18,18 @@
   {
     "id": "story",
     "title": "AiStoryGen",
-    "description": "Craft immersive stories with AI-generated narratives, visuals, and audio experiences.",
+    "description": "This project demonstrates my ability to build scalable, professional-grade web applications using the latest frontend technologies and design standards.",
     "tags": ["Github", "Live Chat"],
     "colorClass": "story",
     "link": "https://aistorygen.org/"
+  },
+  {
+    "id": "product-shoping",
+    "title": "Product Shoping API",
+    "description": "Craft immersive stories with AI-generated narratives, visuals, and audio experiences.",
+    "tags": ["Github", "Live Chat"],
+    "colorClass": "product-shoping",
+    "link": "https://nuxt3-api-product.netlify.app/"
   }
 ]
   
