--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@types/three": "^0.176.0",
     "lucide-vue": "^0.509.0",
+    "lucide-vue-next": "^0.511.0",
     "nuxt": "^3.17.2",
     "three": "^0.176.0",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue3-marquee": "^4.2.2"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.14.0",
