--- a/data/projects.json
+++ b/data/projects.json
@@ -37,7 +37,7 @@
     "description": "Developed a responsive Linkedin-clone web app using Vue.js and Nuxt.js, with secure functionality.",
     "tags": ["Live Chat"],
     "colorClass": "linkedin-clone",
-    "link": "https://nuxt3-api-products-project.pages.dev/"
+    "link": "https://zippy-bombolone-3ed3cc.netlify.app/"
   }
 ]
   
